@@ -5,43 +5,38 @@
 package controller;
 
 import dao.CartDAO;
-import dao.UsersDAO;
+import dao.CustomerDAO;
 import jakarta.servlet.RequestDispatcher;
 import java.io.IOException;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.annotation.WebServlet;
-import jakarta.servlet.http.Cookie;
 import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import jakarta.servlet.http.HttpSession;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 import model.Carts;
-import model.Users;
+import model.Customer;
 
 /**
- * Servlet that handles user login and logout functionality.
- *
- * @author Nguyen Quoc Thinh - CE191376 - 05/10/2025
+ * Servlet that handles customer login and logout functionality.
  */
 @WebServlet(name = "LoginServlet", urlPatterns = {"/login"})
 public class LoginServlet extends HttpServlet {
 
     /**
      * Handles user logout by invalidating the current session.
-     *
-     * This method is triggered when a GET request is made to /login, which is
-     * treated as a logout action in this context.
      */
     @Override
-
     protected void doGet(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
         HttpSession session = request.getSession(false);
         if (session != null) {
             session.invalidate();
         }
+        // Tạo session mới để tránh null pointer khi login lại ngay lập tức
         HttpSession newSession = request.getSession(true);
         newSession.setAttribute("attempts", 0);
         response.sendRedirect("login.jsp");
@@ -49,73 +44,80 @@ public class LoginServlet extends HttpServlet {
 
     /**
      * Handles user login functionality.
-     *
-     * Workflow: 1. Get login credentials (email & password) from the request.
-     * 2. Validate that both fields are not empty. 3. Use UsersDAO to verify
-     * user credentials. 4. If valid → create a session and redirect based on
-     * the user role. 5. If invalid → forward back to login.jsp with an error
-     * message.
      */
     @Override
     protected void doPost(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
-        //Login with Google
+        
         HttpSession session = request.getSession();
         if (session.getAttribute("attempts") == null) {
             session.setAttribute("attempts", 0);
         }
 
         String action = request.getParameter("action");
-        if (action != null && action.equalsIgnoreCase("googleLogin")) {
-            UsersDAO uDAO = new UsersDAO();
+        CustomerDAO customerDAO = new CustomerDAO();
+        CartDAO cartDAO = new CartDAO();
 
+        // -----------------------------------------------------
+        // 1. LOGIN WITH GOOGLE
+        // -----------------------------------------------------
+        if (action != null && action.equalsIgnoreCase("googleLogin")) {
             String email = request.getParameter("email");
             String name = request.getParameter("name");
+            
             if (email != null && name != null) {
-                uDAO.registerForLoginWithGoogle(name, email, 1);
-                Users u = uDAO.loginWithEmail(email);
-                session.setAttribute("user", u);
-                CartDAO cDAO = new CartDAO();
-                List<Carts> carts = cDAO.getItemIntoCartByUserID(u.getUserId());
-                session.setAttribute("cart", carts);
-                response.sendRedirect("homepage");
-                return;
+                // Role 1 mặc định cho khách hàng Google
+                customerDAO.registerForLoginWithGoogle(name, email, 1);
+                Customer customer = customerDAO.loginWithEmail(email);
+                
+                if (customer != null) {
+                    session.setAttribute("user", customer);
+                    // Lấy giỏ hàng
+                    List<Carts> carts = cartDAO.getItemIntoCartByUserID(customer.getCustomerID());
+                    session.setAttribute("cart", carts);
+                    
+                    response.sendRedirect("homepage");
+                    return;
+                }
             }
         }
-        //Normal login
-        // Get user input from the login form
-        String email = request.getParameter("username");
-        String password = request.getParameter("password");
-        String redirect = request.getParameter("redirect"); // Lấy URL redirect nếu có
-        UsersDAO uDAO = new UsersDAO();
 
-        // Validate empty fields
+        // -----------------------------------------------------
+        // 2. NORMAL LOGIN
+        // -----------------------------------------------------
+        String email = request.getParameter("username"); // Form field name
+        String password = request.getParameter("password");
+        String redirect = request.getParameter("redirect");
+
+        // Validate input
         if (email == null || email.trim().isEmpty() || password == null || password.isEmpty()) {
-            // Set error message for empty credentials
             request.setAttribute("error", "Email and password cannot be empty.");
-            // Forward back to login.jsp for the user to correct input
-            RequestDispatcher dispatcher = request.getRequestDispatcher("login.jsp");
-            dispatcher.forward(request, response);
+            request.getRequestDispatcher("login.jsp").forward(request, response);
             return;
         }
 
-        // Create a DAO instance to check login credentials in the database
-        Users u = uDAO.login(email, password); // Attempt to authenticate user
-        if (u != null && u.getStatus().equalsIgnoreCase("block")) {
+        // Check Login
+        Customer customer = customerDAO.login(email, password);
+
+        // Case A: Login Success but Account Blocked
+        if (customer != null && "block".equalsIgnoreCase(customer.getStatus())) {
             request.setAttribute("error", "Your account has been locked.");
             request.getRequestDispatcher("login.jsp").forward(request, response);
             return;
-        } else if (u != null) { // Login successful
-            // Create a new session for the logged-in user
-            session.setAttribute("user", u); // Store the user object in the session
+        } 
+        
+        // Case B: Login Success
+        else if (customer != null) {
+            session.setAttribute("user", customer);
+            session.setAttribute("attempts", 0); // Reset attempts
 
-            // Nếu có redirect URL từ productdetail.jsp, quay lại đó
-            if (u.getRole() == 1) {
+            // Xử lý Redirect URL (nếu user đang xem dở sản phẩm mà bị bắt login)
+            // Chỉ áp dụng cho Customer (Role 1)
+            if (customer.getRole() == 1) {
                 if (redirect != null && !redirect.isEmpty()) {
                     try {
-                        String decodedURL = URLDecoder.decode(redirect, "UTF-8");
-                        CartDAO cDAO = new CartDAO();
-                        List<Carts> carts = cDAO.getItemIntoCartByUserID(u.getUserId());
+                        String decodedURL = URLDecoder.decode(redirect, StandardCharsets.UTF_8);
+                        List<Carts> carts = cartDAO.getItemIntoCartByUserID(customer.getCustomerID());
                         session.setAttribute("cart", carts);
                         response.sendRedirect(decodedURL);
                         return;
@@ -123,65 +125,56 @@ public class LoginServlet extends HttpServlet {
                         System.err.println("Error decoding redirect URL: " + e.getMessage());
                     }
                 }
-
             }
 
-            //Set attemps to 0 if login successfully
-            session.setAttribute("attempts", 0);
+            // Phân quyền chuyển hướng (Role Switching)
+            // Lưu ý: Cần đảm bảo model Customer có phương thức getRole()
+            int role = customer.getRole(); 
 
-            // Get the user's role (default to "1" if null)
-            String roleValue = (u.getRole() != null) ? u.getRole().toString() : "1";
-
-            // Redirect based on user role
-            switch (roleValue) {
-                case "4":
-                    // Role 4: Admin → Redirect to admin dashboard
+            switch (role) {
+                case 4: // Admin
                     response.sendRedirect("admin");
                     break;
-                case "3":
-                    // Role 3: Possibly manager → Redirect to order page
+                case 3: // Shipper/Manager
                     response.sendRedirect("order");
                     break;
-                case "2":
-                    // Role 2: Staff → Redirect to staff page
-
+                case 2: // Staff
                     response.sendRedirect("product");
                     break;
-                case "1":
+                case 1: // Customer
                 default:
-                    // Role 1 or unknown → Redirect to homepage
-                    CartDAO cDAO = new CartDAO();
-                    List<Carts> carts = cDAO.getItemIntoCartByUserID(u.getUserId());
+                    List<Carts> carts = cartDAO.getItemIntoCartByUserID(customer.getCustomerID());
                     session.setAttribute("cart", carts);
                     response.sendRedirect("homepage");
                     break;
             }
-            // If wrong password but correct email
-        } else if (uDAO.getUserByEmail(email)) {
-            // Set error message for invalid credentials
-            int attempts = (int) session.getAttribute("attempts");
-            if (attempts < 5) {
-                int newAttempts = attempts + 1;
-                request.setAttribute("error", "Invalid password.");
-                session.setAttribute("attempts", newAttempts);
 
+        } 
+        // Case C: Login Failed (Wrong Password or Email not found)
+        else {
+            // Kiểm tra xem Email có tồn tại không để tính số lần sai
+            if (customerDAO.getCustomerByEmail(email)) {
+                int attempts = (int) session.getAttribute("attempts");
+                
+                if (attempts < 5) {
+                    int newAttempts = attempts + 1;
+                    session.setAttribute("attempts", newAttempts);
+                    request.setAttribute("error", "Invalid password. Attempt: " + newAttempts + "/5");
+                } else {
+                    request.setAttribute("error", "You have entered the wrong password more than 5 times. Your account has been locked.");
+                    // Khóa tài khoản
+                    customerDAO.updateCustomerStatus("block", email);
+                }
             } else {
-                request.setAttribute("error", "You have entered the wrong password more than 5 times. Your account has been locked.");
-                // Update status to block if exceed attempts
-                uDAO.updateUserStatus("block", email);
+                // Email không tồn tại
+                request.setAttribute("error", "Invalid email or password.");
             }
-            request.getRequestDispatcher("login.jsp").forward(request, response);
-        } else {
-            request.setAttribute("error", "Invalid email or password.");
             request.getRequestDispatcher("login.jsp").forward(request, response);
         }
     }
 
-    /**
-     * Provides a brief description of the servlet for documentation purposes.
-     */
     @Override
     public String getServletInfo() {
-        return "Servlet for handling user login and logout.";
+        return "Servlet for handling customer login and logout.";
     }
 }
